hubble-grafana/l7-egress-visibility.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: jobs-app
    meta.helm.sh/release-namespace: tenant-jobs
  creationTimestamp: "2024-08-05T17:10:30Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: l7-egress-visibility
  namespace: tenant-jobs
  resourceVersion: "5662"
  uid: 2e6d2d67-516e-4ffa-931d-34f764c6a6dd
spec:
  description: L7 policy
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - {}
  endpointSelector: {}
