hubble-grafana/l7-ingress-visibility.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: jobs-app
    meta.helm.sh/release-namespace: tenant-jobs
  creationTimestamp: "2024-08-05T17:10:30Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: l7-ingress-visibility
  namespace: tenant-jobs
  resourceVersion: "5667"
  uid: 30c54165-21aa-4ae1-be92-f0782da2a08f
spec:
  description: L7 policy
  endpointSelector: {}
  ingress:
  - toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
      - port: "50051"
        protocol: TCP
      - port: "9200"
        protocol: TCP
      rules:
        http:
        - {}
